--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,12 @@
             <version>5.8.2</version>
             <scope>test</scope>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/me.jvt.cucumber/reporting-plugin -->
+        <dependency>
+            <groupId>me.jvt.cucumber</groupId>
+            <artifactId>reporting-plugin</artifactId>
+            <version>7.3.0</version>
+        </dependency>
 
 
     </dependencies>
@@ -70,16 +76,16 @@
                         <target>1.8</target>
                     </configuration>
                 </plugin>
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-surefire-plugin</artifactId>
-                    <version>3.0.0-M7</version>
-                    <configuration>
-                        <suiteXmlFiles>
-                            <suiteXmlFile>testng.xml</suiteXmlFile>
-                        </suiteXmlFiles>
-                    </configuration>
-                </plugin>
+<!--                <plugin>-->
+<!--                    <groupId>org.apache.maven.plugins</groupId>-->
+<!--                    <artifactId>maven-surefire-plugin</artifactId>-->
+<!--                    <version>3.0.0-M7</version>-->
+<!--                    <configuration>-->
+<!--                        <suiteXmlFiles>-->
+<!--                            <suiteXmlFile>testng.xml</suiteXmlFile>-->
+<!--                        </suiteXmlFiles>-->
+<!--                    </configuration>-->
+<!--                </plugin>-->
             </plugins>
         </build>
 
