--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -2,4 +2,4 @@
 OverstockURL=https://www.overstock.com/
 
 # Selenium Grid URL
-GridURL=http:/13.56.168.120:4444/wd/hub
+GridURL=http://13.56.168.120:4444/wd/hub
